MAINT-3088 Reduce cognitive complexity of getCodeSystemVersionParams (S3776)